<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FoodCoupDriver</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="live_order">Live Orders</string>
    <string name="account">Account Details</string>
    <string name="picked_up_order">Picked Up Order</string>
    <string name="notification">Notification</string>
    <string name="duty_status">Duty Status</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="status">Status</string>
    <string name="so_for_this_week">So For This Week</string>
    <string name="start_duty">START DUTY</string>
    <string name="complete_more_task">Complete more task &amp; earn more !!!</string>
    <string name="quick_links">QUICK LINKS</string>
    <string name="todays_earnings">Today\'s Earnings</string>
    <string name="weeks_earnings">Week\'s Earnings</string>
    <string name="login_duration">Login Duration</string>
    <string name="floating_cash">Floating Cash</string>
    <string name="wallet_history">Wallet History</string>
    <string name="withdraw_request">WithDraw Request</string>
    <string name="withdraw">WithDraw</string>
    <string name="recharge">Recharge</string>
    <string name="wallet">Wallet</string>
    <string name="recent">Recent Transaction</string>
    <string name="search_orders">SEARCH ORDERS</string>
    <string name="ride_history">Ride History</string>
    <string name="week_earning">Week Earning\'s</string>
    <string name="Get_set_go">Get  - Set -  Go  !!</string>
    <string name="get_order_soon">You Will Start Getting  Orders Soon !!</string>
    <string name="new_orders">NEW ORDERS</string>
    <string name="new_order_request">NEW ORDER REQUEST</string>
    <string name="rejected">REJECTED</string>
    <string name="reject">REJECT</string>
    <string name="confirm">CONFIRM</string>
    <string name="your_order">YOUR ORDER</string>
    <string name="food_order">FOOD ORDER</string>
    <string name="current_task">Current Task</string>
    <string name="next_task">Next Task</string>
    <string name="refer_a_friend">Refer a Friend</string>
    <string name="first_mile_stone">FIRST MILE DISTANCE</string>
    <string name="direction">DIRECTION</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="customer_details">CUSTOMER DETAILS</string>
    <string name="res_details">RESTAURANT DETAILS</string>
    <string name="arived_at_restaurant">ARRIVED AT RESTAURANT</string>
    <string name="customer">CUSTOMER</string>
    <string name="collect_from_customer">COLLECT FROM CUSTOMER</string>
    <string name="from_customer">FROM CUSTOMER</string>
    <string name="collect">COLLECT </string>
    <string name="last_mile_distance">LAST MILE DISTANCE</string>
    <string name="are_you_sure_deliver">Are you sure delivered the order ?</string>
    <string name="are_you_sure_request">Are you sure Request the Amount ?</string>
    <string name="enter_withdraw">Enter the Amount to Withdraw</string>
    <string name="enter_recharge">Enter the Amount to Recharge</string>
    <string name="minimumbalance">* You should have maintain minimum balance</string>
    <string name="enter_amt">Enter Amount</string>
    <string name="request_amt">Request Amount</string>
    <string name="wallet_amt">Wallet Amount</string>
    <string name="confirmation">Confirmation</string>
    <string name="sure_arrived_at_restaurant">Are you sure you arrived at the restaurant ?</string>
    <string name="sure_picked_up_the_order">Are you sure you Picked-up the order ?</string>
    <string name="are_you_sure_collect_the_cash">Are you sure collect the cash from customer ?</string>
    <string name="currently_offline">You\'re currently OFF DUTY,please</string>
    <string name="go_online">go ON DUTY to start earning</string>
    <string name="cancel_btn" tools:ignore="ButtonCase">CANCEL</string>
    <string name="confirm_btn">CONFIRM</string>
    <string name="call_btn">CALL</string>
    <string name="attention">Attention</string>
    <string name="attention1">Your are currently in online Order</string>
    <string name="attention2">you can\'t go Offline</string>
    <string name="order_pick_up">ORDER PICK UP</string>
    <string name="new_task">NEW TASK</string>
    <string name="complete_task">Complete Task</string>
    <string name="reached_customer_location">REACHED CUSTOMER LOCATION</string>
    <string name="payment_successfull">PAYMENT SUCCESSFUL</string>
    <string name="delivery_complete">DELIVERY COMPLETE</string>
    <string name="account_details">ACCOUNT DETAILS</string>
    <string name="vehicle_details">VEHICLE DETAILS</string>
    <string name="account_holder_name">ACCOUNT HOLDER NAME</string>
    <string name="account_number">ACCOUNT NUMBER</string>
    <string name="bank_name">BANK NAME</string>
    <string name="ifsc_code">IFSC CODE</string>
    <string name="pan_card_number">PAN CARD NUMBER</string>
    <string name="vehicle_brand">VEHICLE BRAND</string>
    <string name="vehicle_model">VEHICLE MODEL</string>
    <string name="vehicle_number">VEHICLE NUMBER</string>
    <string name="vehicle_insurance">VEHICLE INSURANCE</string>
    <string name="engine_number">ENGINE NUMBER</string>
    <string name="today">Today </string>
    <string name="today_earning">Today Earnings</string>
    <string name="rupees_symbol">₹</string>
    <string name="eaqrnings">Earnings</string>
    <string name="incentives">Incentives</string>
    <string name="cancelled">Cancelled</string>
    <string name="delivered">Delivered</string>
    <string name="dialy_incentives">Daily incentives for earnings ₹ 350</string>
    <string name="this_week">This Week</string>
    <string name="privous_week">PREVIOUS WEEK</string>
    <string name="past_login_information">PAST LOGIN INFORMATION</string>
    <string name="current_balance">Current Balance</string>
    <string name="balance">Balance</string>
    <string name="limit">Limit</string>
    <string name="your_referral_code">Your Referral Code</string>
    <string name="refcode">FoodCoup Referral Code</string>
    <string name="refer_your_friends">REFER YOUR FRIENDS</string>
    <string name="conn_failure">Connection Failure</string>
    <string name="conn_check">Check your connection</string>
    <string name="conn_try_again">or try again</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="title_activity_distance__maos_new">Distance_Maos_new</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Tap two locations in the map</string>
    <string name="str_tv_distance_time">Distance</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="mobile">Mobile Number</string>
    <string name="email">Email</string>
    <string name="save">SAVE</string>
    <string name="search_hint" tools:ignore="TypographyEllipsis">Search...</string>
    <string name="no_result_found">Results not found</string>
    <string name="select_country">Select a county</string>
    <string name="house_flat">HOUSE/FLAT/BLOCK NO.</string>
    <string name="landmark">Landmark</string>
    <string name="save_as">SAVE AS</string>
    <string name="other">Other</string>
    <string name="work">Work</string>
    <string name="save_address">SAVE ADDRESS</string>
    <string name="address">ADDRESS</string>
    <string name="change">CHANGE</string>
    <string name="current">Use Current Location</string>
    <string name="enable_location_service">Enable Location Service</string>
    <string name="change_locatin">Change Location</string>
    <string name="d_home">HOME</string>
    <string name="d_explore">EXPLORE</string>
    <string name="d_cart">CART</string>
    <string name="d_account">ACCOUNT</string>
    <string name="alert_exit">Exit</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_confirm">Confirm</string>
    <string name="set_location">Set Location</string>
    <string name="offers">Offers</string>
    <string name="search_restaurant">Search for a restaurant or dish </string>
    <string name="filter_and_sort">Filter &amp; Sort by</string>
    <string name="vegonly">Veg Only</string>
    <string name="price_range">Price Range</string>
    <string name="rating">Rating</string>
    <string name="cuisines">Cuisines</string>
    <string name="see_all">See All</string>
    <string name="hot_sellers">HOT SELLERS</string>
    <string name="currency">₹ </string>
    <string name="preorder">PreOrder</string>
    <string name="currency_minus">-</string>
    <string name="rate_res">Rate Restaurant</string>
    <string name="rate_driver">Rate Driver</string>
    <string name="rating_res_driver">Provide Rating</string>
    <string name="top_pic">Top Picks For You</string>
    <string name="noitem">No Item Found Please try Again</string>
    <string name="pastorders">No Past Orders</string>
    <string name="noorders">No Orders</string>
    <string name="nodatas">No Datas found</string>
    <string name="favouritelist">No Favourite Hotels</string>
    <string name="use_coad">USE CODE</string>
    <string name="all_restaurant">All Restaurants</string>
    <string name="view_on_map">View On Map</string>
    <string name="see_all_restaurant">See all Restaurant</string>
    <string name="special_instructions">Special Instructions</string>
    <string name="add_note">Add a note (extra sauce,no onions, etc.,)</string>
    <string name="view_cart">VIEW CART</string>
    <string name="item_carts">Item Carts</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="apply">APPLY</string>
    <string name="bill_details">Bill Details</string>
    <string name="PayTm">PayTm</string>
    <string name="payUmoney">PayUMoney</string>
    <string name="cashon">cash On delivery</string>
    <string name="alreadyitem">Item already added in cart do You want to Clear</string>
    <string name="item_total">Item Total</string>
    <string name="total"> Total</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="total_discount">Total Discount</string>
    <string name="taxes_and_charges">Taxes and Charges</string>
    <string name="to_pay">To Pay</string>
    <string name="unavailable">Currently UnAvailable</string>
    <string name="seem_to_new_location">You seem to be in a new location</string>
    <string name="multiple_address">Multiple address in this location </string>
    <string name="add_address_to_process">ADD ADDRESS TO PROCESS</string>
    <string name="add_address">ADD ADDRESS</string>
    <string name="select_address">SELECT ADDRESS</string>
    <string name="cart_change">Change</string>
    <string name="process_to_pay">PROCESSED TO PAY</string>
    <string name="b_choose_address">Choose a delivery address</string>
    <string name="b_home">Home</string>
    <string name="b_other">Other</string>
    <string name="b_work">Work</string>
    <string name="b_add_new">ADD NEW ADDRESS</string>
    <string name="camera">CAMERA</string>
    <string name="gallery">GALLERY</string>
    <string name="my_account">My Account</string>
    <string name="help">Help</string>
    <string name="logout">LOGOUT</string>
    <string name="ok_got_it">OK,GOT IT</string>
    <string name="submit">SUBMIT</string>
    <string name="restaurant_rating">Restaurant Rating</string>
    <string name="comments">Restaurant Comments</string>
    <string name="total_order">Total Order</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="total_hrs">Total HRS</string>
</resources>