<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/rec_boarder_grey_bg_white"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <foodcoup.driver.demand.FCDViews.AC_Textview
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/attention"
                android:textColor="@color/txt_site_green_color"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />


            <foodcoup.driver.demand.FCDViews.AC_Textview
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/attention1"
                style="@style/FCD_SmallThickTextView"/>


            <foodcoup.driver.demand.FCDViews.AC_Textview
                android:id="@+id/txt_orderNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="ID : 123456"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/txt_site_red_color"
                android:textStyle="bold"/>

            <foodcoup.driver.demand.FCDViews.AC_Textview
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/attention2"
                style="@style/FCD_SmallThickTextView"/>


            <foodcoup.driver.demand.FCDViews.AC_Textview
                android:id="@+id/txt_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_gravity="right"
                android:text="@string/ok_got_it"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/txt_site_green_color"
                android:padding="@dimen/_5sdp"
                android:textStyle="bold"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>