<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/got_it"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"/>

        <foodcoup.driver.demand.FCDViews.AC_Textview
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:text="@string/are_you_sure_deliver"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/colorAppBackground_lite"
            android:textStyle="bold"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp">

            <foodcoup.driver.demand.FCDViews.AC_Textview
                android:id="@+id/txt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/cancel_btn"
                android:textSize="@dimen/_12ssp"
                android:layout_gravity="left"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/txt_site_red_color"/>

            <foodcoup.driver.demand.FCDViews.AC_Textview
                android:id="@+id/txt_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:text="@string/confirm"
                android:textSize="@dimen/_12ssp"
                android:layout_gravity="right"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/txt_site_green_color"/>


        </FrameLayout>

    </LinearLayout>

</LinearLayout>