<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cell_border"
        android:gravity="center"
        android:orientation="horizontal">

       <foodcoup.driver.demand.FCDUtils.Loader.LoaderTextView
           android:id="@+id/lt_totalOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:padding="@dimen/_3sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/total_order"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/black"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/view_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <foodcoup.driver.demand.FCDUtils.Loader.LoaderTextView
                android:id="@+id/lt_startTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_3sdp"
                android:text="@string/start_time"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/view_color" />

        <foodcoup.driver.demand.FCDUtils.Loader.LoaderTextView
            android:id="@+id/lt_endTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/_3sdp"
            android:gravity="center"
            android:text="@string/end_time"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/view_color_lite"/>


</LinearLayout>