<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/no_internet_bg"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                android:orientation="vertical"
                android:layout_weight="1">

                <foodcoup.driver.demand.FCDViews.AC_BoldTextview
                    android:layout_marginTop="@dimen/_18sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/conn_failure"
                    android:textColor="@color/txt_bg_home"/>

                <foodcoup.driver.demand.FCDViews.AC_Textview
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/conn_check"
                    android:textColor="@color/txt_bg_home"/>

                <foodcoup.driver.demand.FCDViews.AC_Textview
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/conn_try_again"
                    android:textColor="@color/txt_bg_home"/>

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</LinearLayout>