<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/_20sdp">

    <foodcoup.driver.demand.FCDUtils.Loader.LoaderTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_rating"
        android:textColor="@color/alert_blue_bg"
        android:gravity="center"
        style="@style/FC_RegularThickTextView"
        android:visibility="visible"
        android:layout_marginTop="@dimen/_15ssp"
        android:layout_marginBottom="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:orientation="vertical">

            <foodcoup.driver.demand.FCDUtils.Loader.LoaderTextView
                android:id="@+id/lt_restaurantnameRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/FC_RegularThickTextView"
                android:visibility="visible"/>
            <RatingBar
                android:id="@+id/ratingBar_restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5ssp"/>
        </LinearLayout>


    </LinearLayout>
   <foodcoup.driver.demand.FCDViews.AC_Edittext
        android:id="@+id/edt_commentres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_5sdp"
        android:background="@drawable/rec_bg_stroke_gray_layout"
        android:cursorVisible="true"
        android:hint="@string/comments"
        android:gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:padding="@dimen/_5sdp"
        style="@style/FC_SmallThickTextView"/>


   <foodcoup.driver.demand.FCDViews.AC_Textview
        android:id="@+id/txt_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rec_bg_green_layout"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/submit"
        android:padding="@dimen/_5sdp"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/white"
        android:visibility="visible"/>

</LinearLayout>