<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/got_it"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"/>

        <foodcoup.driver.demand.FCDViews.AC_Textview
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/Get_set_go"
            android:textSize="@dimen/_20ssp"
            android:textColor="@color/colordarkgrey"
            android:textStyle="bold"/>

        <foodcoup.driver.demand.FCDViews.AC_Textview
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/get_order_soon"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/colorAppBackground_lite"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="right|center"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded">

            <LinearLayout
                android:id="@+id/ll_gotIt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                tools:ignore="UselessParent">

                <foodcoup.driver.demand.FCDViews.AC_Textview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok_got_it"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/txt_site_green_color"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/got_it_arrow"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    tools:ignore="ContentDescription" />


            </LinearLayout>



        </LinearLayout>

    </LinearLayout>


</LinearLayout>