<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/ll_main"
    tools:context=".FCDFragment.FCDLoginDuration.FCD_particularLoginDuration">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/rec_bg_green_layout"
        android:orientation="horizontal"
        android:visibility="visible"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp">

        <foodcoup.driver.demand.FCDViews.AC_Textview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="@string/total_hrs"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />


        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:src="@drawable/from_to_white" />

        <foodcoup.driver.demand.FCDUtils.Loader.LoaderTextView
            android:id="@+id/lt_totalhrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="0 m"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />


    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cell_border"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="horizontal">

        <foodcoup.driver.demand.FCDUtils.Loader.LoaderTextView
            android:id="@+id/lt_totalOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/total_order"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/black"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/view_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <foodcoup.driver.demand.FCDUtils.Loader.LoaderTextView
                android:id="@+id/lt_startTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/start_time"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/view_color" />

        <foodcoup.driver.demand.FCDUtils.Loader.LoaderTextView
            android:id="@+id/lt_endTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/end_time"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_loginDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"/>


</LinearLayout>